- Use -mtune=native instead
git-svn-id: http://odamex.net/svn/root/trunk@4551 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/sdl/client.cbp
+++ b/client/sdl/client.cbp
@@ -16,6 +16,7 @@
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
 					<Add option="-O3" />
+					<Add option="-mtune=native" />
 					<Add option="-DWIN32" />
 					<Add option="-D_WINDOWS" />
 					<Add option="-DNDEBUG" />
