-Apply pdk's patch to add PNG screenshot support (bug 136). Big thanks to pdk. -PNG support requires libpng and zlib. If either are missing at compile-time, Odamex will fall back to BMP screenshots. -Adds the client cvar cl_pngscreenshots (may be removed in the future) to toggle PNG screenshots. cl_pngscreenshots will always be disabled if libpng is missing at compile-time.
git-svn-id: http://odamex.net/svn/root/trunk@4586 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -70,6 +70,7 @@ endif()
 find_package(PNG)
 if(PNG_FOUND)
   include_directories(${PNG_INCLUDE_DIRS})
+  add_definitions(-DUSE_PNG)
 else()
   message(WARNING "libpng not found, client will be built without PNG support.")
 endif()
