-Add the -DUSE_PNG compiler flag to all build targets in the CodeBlocks project file.
git-svn-id: http://odamex.net/svn/root/trunk@4588 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/sdl/client.cbp
+++ b/client/sdl/client.cbp
@@ -20,6 +20,7 @@
 					<Add option="-DWIN32" />
 					<Add option="-D_WINDOWS" />
 					<Add option="-DNDEBUG" />
+					<Add option="-DUSE_PNG" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -48,6 +49,7 @@
 					<Add option="-DWIN32" />
 					<Add option="-D_WINDOWS" />
 					<Add option="-D_DEBUG" />
+					<Add option="-DUSE_PNG" />
 				</Compiler>
 				<Linker>
 					<Add library="mingw32" />
@@ -73,6 +75,7 @@
 					<Add option="-DUNIX" />
 					<Add option="-DLINUX" />
 					<Add option="-DNDEBUG" />
+					<Add option="-DUSE_PNG" />
 					<Add directory="/usr/include/SDL" />
 				</Compiler>
 				<Linker>
@@ -96,6 +99,7 @@
 					<Add option="-DUNIX" />
 					<Add option="-DLINUX" />
 					<Add option="-D_DEBUG" />
+					<Add option="-DUSE_PNG" />
 					<Add directory="/usr/include/SDL" />
 				</Compiler>
 				<Linker>
@@ -117,6 +121,7 @@
 					<Add option="-DUNIX" />
 					<Add option="-DLINUX" />
 					<Add option="-DNDEBUG" />
+					<Add option="-DUSE_PNG" />
 					<Add directory="/usr/include/SDL" />
 				</Compiler>
 				<Linker>
@@ -139,6 +144,7 @@
 					<Add option="-DWIN32" />
 					<Add option="-D_WINDOWS" />
 					<Add option="-D_DEBUG" />
+					<Add option="-DUSE_PNG" />
 				</Compiler>
 				<Linker>
 					<Add library="mingw32" />
@@ -175,6 +181,7 @@
 					<Add option="/DNOMINMAX" />
 					<Add option="/D_CRT_SECURE_NO_WARNINGS" />
 					<Add option="/DPORTMIDI" />
+					<Add option="/DUSE_PNG" />
 					<Add directory="." />
 					<Add directory="../src" />
 					<Add directory="../../common" />
@@ -250,6 +257,7 @@
 					<Add option="/DNOMINMAX" />
 					<Add option="/D_CRT_SECURE_NO_WARNINGS" />
 					<Add option="/DPORTMIDI" />
+					<Add option="/DUSE_PNG" />
 					<Add directory="." />
 					<Add directory="../src" />
 					<Add directory="../../common" />
@@ -309,6 +317,7 @@
 			<Add option="-Wno-long-long" />
 			<Add option="-fno-optimize-sibling-calls" />
 			<Add option="-DPORTMIDI" />
+			<Add option="-DUSE_PNG" />
 			<Add directory="." />
 			<Add directory="../src" />
 			<Add directory="../../common" />
