-Update libtextscreen from Chocolate Doom 2.0.0
git-svn-id: http://odamex.net/svn/root/trunk@4603 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/textscreen/textscreen.cbp
+++ b/textscreen/textscreen.cbp
@@ -149,6 +149,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="txt_dropdown.h" />
+		<Unit filename="txt_fileselect.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="txt_fileselect.h" />
 		<Unit filename="txt_font.h" />
 		<Unit filename="txt_gui.c">
 			<Option compilerVar="CC" />
