-Update the CodeBlocks project file for i_sdl.h
git-svn-id: http://odamex.net/svn/root/branches/sdl20@4608 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/sdl/client.cbp
+++ b/client/sdl/client.cbp
@@ -583,6 +583,7 @@
 		<Unit filename="i_music.h" />
 		<Unit filename="i_musicsystem.cpp" />
 		<Unit filename="i_musicsystem.h" />
+		<Unit filename="i_sdl.h" />
 		<Unit filename="i_sdlvideo.cpp" />
 		<Unit filename="i_sdlvideo.h" />
 		<Unit filename="i_sound.cpp" />
