--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,12 +63,12 @@ set(UPNPC_BUILD_SHARED OFF CACHE INTERNAL "" FORCE)
 set(UPNPC_BUILD_TESTS OFF CACHE INTERNAL "" FORCE)
 set(UPNPC_INSTALL OFF CACHE INTERNAL "" FORCE)
 mark_as_advanced(FORCE UPNPC_INSTALL)
-add_subdirectory(libminiupnpc)
+add_subdirectory(libraries/libminiupnpc)
 
 # PortMidi
 cmake_dependent_option(USE_INTREE_PORTMIDI "Compile with the version of PortMidi included in the source tree." ON "WIN32" OFF)
 if(USE_INTREE_PORTMIDI)
-  add_subdirectory(portmidi)
+  add_subdirectory(ilbraries/portmidi)
 endif()
 
 # Subdirectories for Odamex projects
