--- a/client/sdl/client.cbp
+++ b/client/sdl/client.cbp
@@ -65,97 +65,6 @@
 					<Add directory="../../lib" />
 				</Linker>
 			</Target>
-			<Target title="Unix Release">
-				<Option platforms="Unix;" />
-				<Option output="../../odamex" prefix_auto="0" extension_auto="0" />
-				<Option working_dir="../../" />
-				<Option object_output="../../obj/client/release" />
-				<Option deps_output="../../deps" />
-				<Option type="0" />
-				<Option compiler="gcc" />
-				<Option projectResourceIncludeDirsRelation="0" />
-				<Compiler>
-					<Add option="-O2" />
-					<Add option="-DUNIX" />
-					<Add option="-DLINUX" />
-					<Add option="-DNDEBUG" />
-					<Add option="-DUSE_PNG" />
-					<Add directory="/usr/include/SDL" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-					<Add library="X11" />
-					<Add library="..\..\lib\libtextscreen.a" />
-				</Linker>
-			</Target>
-			<Target title="Unix Debug">
-				<Option platforms="Unix;" />
-				<Option output="../../odamex-dbg" prefix_auto="0" extension_auto="0" />
-				<Option working_dir="../../" />
-				<Option object_output="../../obj/client/debug" />
-				<Option deps_output="../../deps" />
-				<Option type="0" />
-				<Option compiler="gcc" />
-				<Option projectResourceIncludeDirsRelation="0" />
-				<Compiler>
-					<Add option="-Wall" />
-					<Add option="-g" />
-					<Add option="-DUNIX" />
-					<Add option="-DLINUX" />
-					<Add option="-D_DEBUG" />
-					<Add option="-DUSE_PNG" />
-					<Add directory="/usr/include/SDL" />
-				</Compiler>
-				<Linker>
-					<Add library="X11" />
-					<Add library="..\..\lib\libtextscreen-dbg.a" />
-				</Linker>
-			</Target>
-			<Target title="Mac Release">
-				<Option platforms="Mac;" />
-				<Option output="../../odamex" prefix_auto="0" extension_auto="0" />
-				<Option working_dir="../../" />
-				<Option object_output="../../obj/client/release" />
-				<Option deps_output="../../deps" />
-				<Option type="0" />
-				<Option compiler="gcc" />
-				<Option projectResourceIncludeDirsRelation="0" />
-				<Compiler>
-					<Add option="-O2" />
-					<Add option="-DUNIX" />
-					<Add option="-DLINUX" />
-					<Add option="-DNDEBUG" />
-					<Add option="-DUSE_PNG" />
-					<Add directory="/usr/include/SDL" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-				</Linker>
-			</Target>
-			<Target title="Mac Debug">
-				<Option platforms="Mac;" />
-				<Option output="../../odamex-dbg" prefix_auto="0" extension_auto="0" />
-				<Option working_dir="../../" />
-				<Option object_output="../../obj/client/debug" />
-				<Option deps_output="../../deps" />
-				<Option type="0" />
-				<Option compiler="gcc" />
-				<Option projectLinkerOptionsRelation="2" />
-				<Option projectResourceIncludeDirsRelation="0" />
-				<Compiler>
-					<Add option="-Wall" />
-					<Add option="-gdwarf-2" />
-					<Add option="-DWIN32" />
-					<Add option="-D_WINDOWS" />
-					<Add option="-D_DEBUG" />
-					<Add option="-DUSE_PNG" />
-				</Compiler>
-				<Linker>
-					<Add library="mingw32" />
-					<Add library="winmm" />
-					<Add library="wsock32" />
-				</Linker>
-			</Target>
 			<Target title="Win Release (VC)">
 				<Option platforms="Windows;" />
 				<Option output="../../odamex.exe" prefix_auto="0" extension_auto="0" />
@@ -320,8 +229,6 @@
 			</Target>
 		</Build>
 		<VirtualTargets>
-			<Add alias="All (MAC)" targets="Mac Release;Mac Debug;" />
-			<Add alias="All (UNIX)" targets="Unix Release;Unix Debug;" />
 			<Add alias="All (WIN GCC)" targets="Win Release (GCC);Win Debug (GCC);" />
 			<Add alias="All (WIN VC)" targets="Win Release (VC);Win Debug (VC);" />
 		</VirtualTargets>
@@ -585,10 +492,6 @@
 		<Unit filename="../src/wi_stuff.h" />
 		<Unit filename="client.rc">
 			<Option compilerVar="WINDRES" />
-			<Option target="Win Release (GCC)" />
-			<Option target="Win Debug (GCC)" />
-			<Option target="Win Release (VC)" />
-			<Option target="Win Debug (VC)" />
 		</Unit>
 		<Unit filename="hardware.cpp" />
 		<Unit filename="hardware.h" />
@@ -610,12 +513,7 @@
 		<Unit filename="i_video.h" />
 		<Unit filename="mus2midi.cpp" />
 		<Unit filename="mus2midi.h" />
-		<Unit filename="resource.h">
-			<Option target="Win Release (GCC)" />
-			<Option target="Win Debug (GCC)" />
-			<Option target="Win Release (VC)" />
-			<Option target="Win Debug (VC)" />
-		</Unit>
+		<Unit filename="resource.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
