--- a/server/win32/server.cbp
+++ b/server/win32/server.cbp
@@ -60,82 +60,6 @@
 					<Add directory="../../lib" />
 				</Linker>
 			</Target>
-			<Target title="Unix Release">
-				<Option platforms="Unix;" />
-				<Option output="../../odasrv" prefix_auto="0" extension_auto="0" />
-				<Option working_dir="../../" />
-				<Option object_output="../../obj/server/release/" />
-				<Option deps_output="../../deps" />
-				<Option type="1" />
-				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
-				<Option projectResourceIncludeDirsRelation="1" />
-				<Compiler>
-					<Add option="-O2" />
-					<Add option="-DUNIX" />
-					<Add option="-DLINUX" />
-					<Add option="-DNDEBUG" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-				</Linker>
-			</Target>
-			<Target title="Unix Debug">
-				<Option platforms="Unix;" />
-				<Option output="../../odasrv-dbg" prefix_auto="0" extension_auto="0" />
-				<Option working_dir="../../" />
-				<Option object_output="../../obj/server/debug/" />
-				<Option deps_output="../../deps" />
-				<Option type="1" />
-				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
-				<Option projectResourceIncludeDirsRelation="1" />
-				<Compiler>
-					<Add option="-Wall" />
-					<Add option="-g" />
-					<Add option="-DUNIX" />
-					<Add option="-DLINUX" />
-					<Add option="-DDEBUG" />
-				</Compiler>
-			</Target>
-			<Target title="Mac Release">
-				<Option platforms="Mac;" />
-				<Option output="../../odasrv" prefix_auto="0" extension_auto="0" />
-				<Option working_dir="../../" />
-				<Option object_output="../../obj/server/release/" />
-				<Option deps_output="../../deps" />
-				<Option type="1" />
-				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
-				<Option projectResourceIncludeDirsRelation="1" />
-				<Compiler>
-					<Add option="-O2" />
-					<Add option="-DUNIX" />
-					<Add option="-DLINUX" />
-					<Add option="-DNDEBUG" />
-				</Compiler>
-				<Linker>
-					<Add option="-s" />
-				</Linker>
-			</Target>
-			<Target title="Mac Debug">
-				<Option platforms="Mac;" />
-				<Option output="../../odasrv-dbg" prefix_auto="0" extension_auto="0" />
-				<Option working_dir="../../" />
-				<Option object_output="../../obj/server/debug/" />
-				<Option deps_output="../../deps" />
-				<Option type="1" />
-				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
-				<Option projectResourceIncludeDirsRelation="1" />
-				<Compiler>
-					<Add option="-Wall" />
-					<Add option="-g" />
-					<Add option="-DUNIX" />
-					<Add option="-DLINUX" />
-					<Add option="-DDEBUG" />
-				</Compiler>
-			</Target>
 			<Target title="Win Release (VC)">
 				<Option platforms="Windows;" />
 				<Option output="../../odasrv.exe" prefix_auto="0" extension_auto="0" />
@@ -265,8 +189,6 @@
 			</Target>
 		</Build>
 		<VirtualTargets>
-			<Add alias="All (MAC)" targets="Mac Release;Mac Debug;" />
-			<Add alias="All (UNIX)" targets="Unix Release;Unix Debug;" />
 			<Add alias="All (WIN GCC)" targets="Win Release (GCC);Win Debug (GCC);" />
 			<Add alias="All (WIN VC)" targets="Win Release (VC);Win Debug (VC);" />
 		</VirtualTargets>
@@ -493,18 +415,9 @@
 		<Unit filename="../src/sv_vote.cpp" />
 		<Unit filename="../src/sv_vote.h" />
 		<Unit filename="../src/v_palette.cpp" />
-		<Unit filename="resource.h">
-			<Option target="Win Release (GCC)" />
-			<Option target="Win Debug (GCC)" />
-			<Option target="Win Release (VC)" />
-			<Option target="Win Debug (VC)" />
-		</Unit>
+		<Unit filename="resource.h" />
 		<Unit filename="server.rc">
 			<Option compilerVar="WINDRES" />
-			<Option target="Win Release (GCC)" />
-			<Option target="Win Debug (GCC)" />
-			<Option target="Win Release (VC)" />
-			<Option target="Win Debug (VC)" />
 		</Unit>
 		<Extensions>
 			<code_completion />
