-Update the CMake project files to accomodate the in-tree versions of zlib and libpng. The in-tree libraries will currently only be built if a shared library is not found.
git-svn-id: http://odamex.net/svn/root/trunk@4616 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ add_subdirectory(libraries/libminiupnpc)
 # PortMidi
 cmake_dependent_option(USE_INTREE_PORTMIDI "Compile with the version of PortMidi included in the source tree." ON "WIN32" OFF)
 if(USE_INTREE_PORTMIDI)
-  add_subdirectory(ilbraries/portmidi)
+  add_subdirectory(libraries/portmidi)
 endif()
 
 # Subdirectories for Odamex projects
