--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -43,37 +43,50 @@ if(WIN32)
 endif()
 
 # SDL configuration
-find_package(SDL)
-if(SDL_FOUND)
-  include_directories(${SDL_INCLUDE_DIR})
-else()
-  message(WARNING "SDL not found, client target not generated.")
-endif()
+find_package(SDL REQUIRED)
+include_directories(${SDL_INCLUDE_DIR})
 
 # SDL_Mixer configuration
-find_package(SDL_mixer)
-if(SDLMIXER_FOUND)
-  include_directories(${SDLMIXER_INCLUDE_DIR})
-else()
-  message(WARNING "SDL_mixer not found, client target not generated.")
-endif()
+find_package(SDL_mixer REQUIRED)
+include_directories(${SDLMIXER_INCLUDE_DIR})
 
 # zlib configuration
 find_package(ZLIB)
-if(ZLIB_FOUND)
-  include_directories(${ZLIB_INCLUDE_DIRS})
-else()
-  message(WARNING "zlib not found, client will be built without zlib support.")
+if(NOT ZLIB_FOUND)
+  set(USE_INTREE_ZLIB)
+  set(ZLIB_LIBRARY "z")
+  set(ZLIB_LIBRARIES ${ZLIB_LIBRARY})
+  set(ZLIB_DIR ../libraries/zlib/)
+  set(ZLIB_INCLUDE_DIR ${ZLIB_DIR})
+  set(ZLIB_INCLUDE_DIRS ${ZLIB_DIR})
+  file(GLOB ZLIB_HEADERS ${ZLIB_DIR}/*.h)
+  file(GLOB ZLIB_SOURCES ${ZLIB_DIR}/*.c)
+  include_directories(${ZLIB_DIR})
+  add_library(${ZLIB_LIBRARY} STATIC ${ZLIB_SOURCES} ${ZLIB_HEADERS})
+  message(STATUS "zlib will be built and staticaly linked.")
 endif()
+
+include_directories(${ZLIB_INCLUDE_DIRS})
 
 # libpng configuration
 find_package(PNG)
-if(PNG_FOUND)
-  include_directories(${PNG_INCLUDE_DIRS})
+if(NOT PNG_FOUND)
+  set(USE_INTREE_LIBPNG)
+  set(PNG_LIBRARY "png")
+  set(PNG_LIBRARIES ${PNG_LIBRARY})
+  set(PNG_DIR ../libraries/libpng/)
+  set(PNG_INCLUDE_DIR ${PNG_DIR})
+  set(PNG_INCLUDE_DIRS ${PNG_DIR})
+  file(GLOB PNG_HEADERS ${PNG_DIR}/*.h)
+  file(GLOB PNG_SOURCES ${PNG_DIR}/*.c)
+  include_directories(${LIBPNG_DIR})
+  add_library(${PNG_LIBRARY} STATIC ${PNG_SOURCES} ${PNG_HEADERS})
+  message(STATUS "libpng will be built and staticaly linked.")
   add_definitions(-DUSE_PNG)
-else()
-  message(WARNING "libpng not found, client will be built without PNG support.")
 endif()
+
+include_directories(${PNG_INCLUDE_DIRS})
+add_definitions(-DUSE_PNG)
 
 # PortMidi configuration
 if(USE_INTREE_PORTMIDI)
@@ -113,13 +126,8 @@ if(SDL_FOUND AND SDLMIXER_FOUND)
   target_link_libraries(odamex ${SDL_LIBRARY})
   target_link_libraries(odamex ${SDLMIXER_LIBRARY})
 
-  if(ZLIB_FOUND)
-    target_link_libraries(odamex ${ZLIB_LIBRARY})
-  endif()
-
-  if(PNG_FOUND)
-    target_link_libraries(odamex ${PNG_LIBRARY})
-  endif()
+  target_link_libraries(odamex ${ZLIB_LIBRARY})
+  target_link_libraries(odamex ${PNG_LIBRARY} ${ZLIB_LIBRARY})
 
   if(USE_INTREE_PORTMIDI)
     target_link_libraries(odamex portmidi-static)
