--- a/libraries/zlib/zlib.cbp
+++ b/libraries/zlib/zlib.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Win Debug (GCC)">
-				<Option output="../../lib/zlib-dbg" prefix_auto="1" extension_auto="1" />
+				<Option output="../../lib/z-dbg" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="../../obj/zlib/gcc/debug" />
 				<Option type="2" />
@@ -33,7 +33,7 @@
 				</Linker>
 			</Target>
 			<Target title="Win Release (GCC)">
-				<Option output="../../lib/zlib" prefix_auto="1" extension_auto="1" />
+				<Option output="../../lib/z" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="../../obj/zlib/gcc/release" />
 				<Option type="2" />
@@ -55,7 +55,7 @@
 				</ResourceCompiler>
 			</Target>
 			<Target title="Win Debug (VC)">
-				<Option output="../../lib/zlib-dbg" prefix_auto="1" extension_auto="1" />
+				<Option output="../../lib/z-dbg" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="../../obj/zlib/vc/debug" />
 				<Option type="2" />
@@ -76,7 +76,7 @@
 				</ResourceCompiler>
 			</Target>
 			<Target title="Win Release (VC)">
-				<Option output="../../lib/zlib" prefix_auto="1" extension_auto="1" />
+				<Option output="../../lib/z" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option object_output="../../obj/zlib/vc/release" />
 				<Option type="2" />
