-Add #defines for CLIENT_APP and SERVER_APP to the CMake system and CodeBlock project files. This will allow code in the /common directory to be included/excluded at compile-time based on which binary is being compiled.
git-svn-id: http://odamex.net/svn/root/trunk@4629 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -5,6 +5,9 @@ endif()
 
 global_compile_options()
 
+# #define CLIENT_APP for use in the source code
+add_definitions(-DCLIENT_APP)
+
 # Common
 set(COMMON_DIR ../common)
 file(GLOB COMMON_HEADERS ${COMMON_DIR}/*.h)
