--- a/client/sdl/client.cbp
+++ b/client/sdl/client.cbp
@@ -20,6 +20,7 @@
 					<Add option="-DWIN32" />
 					<Add option="-D_WINDOWS" />
 					<Add option="-DNDEBUG" />
+					<Add option="-DCLIENT_APP" />
 					<Add option="-DUSE_PNG" />
 				</Compiler>
 				<Linker>
@@ -51,6 +52,7 @@
 					<Add option="-DWIN32" />
 					<Add option="-D_WINDOWS" />
 					<Add option="-D_DEBUG" />
+					<Add option="-DCLIENT_APP" />
 					<Add option="-DUSE_PNG" />
 				</Compiler>
 				<Linker>
@@ -93,6 +95,7 @@
 					<Add option="/D_WINDOWS" />
 					<Add option="/DNOMINMAX" />
 					<Add option="/D_CRT_SECURE_NO_WARNINGS" />
+					<Add option="/DCLIENT_APP" />
 					<Add option="/DPORTMIDI" />
 					<Add option="/DUSE_PNG" />
 					<Add directory="." />
@@ -175,6 +178,7 @@
 					<Add option="/D_WINDOWS" />
 					<Add option="/DNOMINMAX" />
 					<Add option="/D_CRT_SECURE_NO_WARNINGS" />
+					<Add option="/DCLIENT_APP" />
 					<Add option="/DPORTMIDI" />
 					<Add option="/DUSE_PNG" />
 					<Add directory="." />
@@ -239,6 +243,7 @@
 			<Add option="-fexceptions" />
 			<Add option="-Wno-long-long" />
 			<Add option="-fno-optimize-sibling-calls" />
+			<Add option="-DCLIENT_APP" />
 			<Add option="-DPORTMIDI" />
 			<Add option="-DUSE_PNG" />
 			<Add directory="." />
