-Remove the REQUIRED parameter from the find_package function calls for SDL and SDL_mixer in CMakeLists.txt (added in r4616). It prevented the compilation of odasrv on systems that are missing SDL and SDL_mixer.
git-svn-id: http://odamex.net/svn/root/trunk@4630 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -46,15 +46,23 @@ if(WIN32)
 endif()
 
 # SDL configuration
-find_package(SDL REQUIRED)
-include_directories(${SDL_INCLUDE_DIR})
+find_package(SDL)
+if(SDL_FOUND)
+  include_directories(${SDL_INCLUDE_DIR})
+else()
+  message(WARNING "SDL not found, client application can not be built.")
+endif()
 
 # SDL_Mixer configuration
-find_package(SDL_mixer REQUIRED)
-include_directories(${SDLMIXER_INCLUDE_DIR})
+find_package(SDL_mixer)
+if(SDLMIXER_FOUND)
+  include_directories(${SDLMIXER_INCLUDE_DIR})
+else()
+  message(WARNING "SDL_mixer not found, client application can not be built.")
+endif()
 
 # zlib configuration
-find_package(ZLIB)
+find_package(ZLIB QUIET)
 if(NOT ZLIB_FOUND)
   set(USE_INTREE_ZLIB)
   set(ZLIB_LIBRARY "z")
@@ -66,13 +74,13 @@ if(NOT ZLIB_FOUND)
   file(GLOB ZLIB_SOURCES ${ZLIB_DIR}/*.c)
   include_directories(${ZLIB_DIR})
   add_library(${ZLIB_LIBRARY} STATIC ${ZLIB_SOURCES} ${ZLIB_HEADERS})
-  message(STATUS "zlib will be built and staticaly linked.")
+  message(STATUS "zlib will be built and staticaly linked when compiling the client application.")
 endif()
 
 include_directories(${ZLIB_INCLUDE_DIRS})
 
 # libpng configuration
-find_package(PNG)
+find_package(PNG QUIET)
 if(NOT PNG_FOUND)
   set(USE_INTREE_LIBPNG)
   set(PNG_LIBRARY "png")
@@ -84,7 +92,7 @@ if(NOT PNG_FOUND)
   file(GLOB PNG_SOURCES ${PNG_DIR}/*.c)
   include_directories(${LIBPNG_DIR})
   add_library(${PNG_LIBRARY} STATIC ${PNG_SOURCES} ${PNG_HEADERS})
-  message(STATUS "libpng will be built and staticaly linked.")
+  message(STATUS "libpng will be built and staticaly linked when compiling the client application.")
   add_definitions(-DUSE_PNG)
 endif()
 
@@ -96,7 +104,7 @@ if(USE_INTREE_PORTMIDI)
   include_directories(../libraries/portmidi/pm_common/ ../libraries/portmidi/porttime/)
   add_definitions(-DPORTMIDI)
 else()
-  find_package(PortMidi)
+  find_package(PortMidi QUIET)
   if(PORTMIDI_FOUND)
     include_directories(${PORTMIDI_INCLUDE_DIR})
     add_definitions(-DPORTMIDI)
