-Fix an error in r4629 that used the wrong format for specifying the option to define SERVER_APP.
git-svn-id: http://odamex.net/svn/root/trunk@4643 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/server/win32/server.cbp
+++ b/server/win32/server.cbp
@@ -204,7 +204,7 @@
 			<Add option="-Wno-long-long" />
 			<Add option="-fno-optimize-sibling-calls" />
 			<Add option="-D_WIN32_WINNT=0x0500" />
-			<Add option="/DSERVER_APP" />
+			<Add option="-DSERVER_APP" />
 			<Add option="-DJSON_IS_AMALGAMATION" />
 			<Add directory="." />
 			<Add directory="../src" />
