-Use -march=native flag when compiling with gcc/mingw to ensure the appropriate instruction set is used when optimizing.
git-svn-id: http://odamex.net/svn/root/trunk@4645 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/sdl/client.cbp
+++ b/client/sdl/client.cbp
@@ -16,7 +16,7 @@
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
 					<Add option="-O3" />
-					<Add option="-mtune=native" />
+					<Add option="-march=native" />
 					<Add option="-DWIN32" />
 					<Add option="-D_WINDOWS" />
 					<Add option="-DNDEBUG" />
@@ -46,6 +46,8 @@
 				<Option compiler="gcc" />
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
+					<Add option="-O0" />
+					<Add option="-march=native" />
 					<Add option="-Wall" />
 					<Add option="-g" />
 					<Add option="-fno-inline" />
