- Check that gcc has support for -march=native.  - Fix building with altivec support.
git-svn-id: http://odamex.net/svn/root/trunk@4667 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,7 +1,14 @@
 # Client flags
 if(NOT MSVC)
-  set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native")
+  if(GCC_VERSION VERSION_GREATER 4.2)
+    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native")
+  else(GCC_VERSION VERSION_GREATER 4.2)
+    if(APPLE)
+      set(CMAKE_CXX_FLAGS_RELEASE "-faltivec")
+    endif()
+  endif()
 endif()
+
 
 global_compile_options()
 
