Fix win32 build with r4675 change
git-svn-id: http://odamex.net/svn/root/trunk@4676 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/odalaunch/CMakeLists.txt
+++ b/odalaunch/CMakeLists.txt
@@ -42,6 +42,10 @@ if(wxWidgets_FOUND)
     ${XRCRES_HEADER})
   target_link_libraries(odalaunch ${wxWidgets_LIBRARIES})
 
+  if(WIN32)
+    target_link_libraries(odamex ws2_32)
+  endif()
+
   set(MACOSX_BUNDLE_BUNDLE_NAME OdaLaunch)
   set(MACOSX_BUNDLE_INFO_STRING "ODAMEX and its likeness © ${PROJECT_COPYRIGHT} Odamex team.")
   set(MACOSX_BUNDLE_LONG_VERSION_STRING "${PROJECT_VERSION}")
