Enable mmx optimization on Xbox.
git-svn-id: http://odamex.net/svn/root/trunk@4684 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/Xbox/odamex.vcproj
+++ b/Xbox/odamex.vcproj
@@ -23,7 +23,7 @@
 				OmitFramePointers="FALSE"
 				OptimizeForProcessor="2"
 				AdditionalIncludeDirectories=".,..\client\src,..\client\sdl,..\common"
-				PreprocessorDefinitions="_DEBUG;WIN32;_XBOX;NOASM;GCONSOLE"
+				PreprocessorDefinitions="_DEBUG;WIN32;_XBOX;NOASM;GCONSOLE;__MMX__"
 				MinimalRebuild="TRUE"
 				ExceptionHandling="TRUE"
 				BasicRuntimeChecks="3"
@@ -195,7 +195,7 @@
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="2"
 				AdditionalIncludeDirectories=".,..\client\src,..\client\sdl,..\common"
-				PreprocessorDefinitions="NDEBUG;WIN32;_XBOX;NOASM;GCONSOLE"
+				PreprocessorDefinitions="NDEBUG;WIN32;_XBOX;NOASM;GCONSOLE;__MMX__"
 				StringPooling="TRUE"
 				MinimalRebuild="FALSE"
 				ExceptionHandling="TRUE"
