-Rename hardware.cpp to i_video.cpp. Merge hardware.h into i_video.h and remove hardware.h.
git-svn-id: http://odamex.net/svn/root/branches/videoabs@4700 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/sdl/client.cbp
+++ b/client/sdl/client.cbp
@@ -500,8 +500,6 @@
 		<Unit filename="client.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
-		<Unit filename="hardware.cpp" />
-		<Unit filename="hardware.h" />
 		<Unit filename="i_input.cpp" />
 		<Unit filename="i_input.h" />
 		<Unit filename="i_main.cpp" />
@@ -517,6 +515,7 @@
 		<Unit filename="i_sound.h" />
 		<Unit filename="i_system.cpp" />
 		<Unit filename="i_system.h" />
+		<Unit filename="i_video.cpp" />
 		<Unit filename="i_video.h" />
 		<Unit filename="mus2midi.cpp" />
 		<Unit filename="mus2midi.h" />
