Fix compiler version conditional
git-svn-id: http://odamex.net/svn/root/trunk@4717 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,12 +1,14 @@
 # Client flags
 if(NOT MSVC)
-  if(GCC_VERSION VERSION_GREATER 4.2)
-    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native")
-  else(GCC_VERSION VERSION_GREATER 4.2)
-    if(APPLE)
-      set(CMAKE_CXX_FLAGS_RELEASE "-faltivec")
-    endif()
-  endif()
+	if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+		if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.2)
+			set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native")
+		else(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 4.2)
+			if(APPLE)
+				set(CMAKE_CXX_FLAGS_RELEASE "-faltivec")
+			endif()
+		endif()
+	endif()
 endif()
 
 
