- Create stub files for player statistics generation
git-svn-id: http://odamex.net/svn/root/trunk@4801 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/server/win32/server.cbp
+++ b/server/win32/server.cbp
@@ -416,6 +416,8 @@
 		<Unit filename="../src/sv_sqp.h" />
 		<Unit filename="../src/sv_sqpold.cpp" />
 		<Unit filename="../src/sv_sqpold.h" />
+		<Unit filename="../src/sv_stats.cpp" />
+		<Unit filename="../src/sv_stats.h" />
 		<Unit filename="../src/sv_stubs.cpp" />
 		<Unit filename="../src/sv_vote.cpp" />
 		<Unit filename="../src/sv_vote.h" />
