-Always show the status bar if the automap is active. -Add v_screenshot.cpp and v_screenshot.h to the CodeBlocks project file.
git-svn-id: http://odamex.net/svn/root/branches/videoabs@4817 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/sdl/client.cbp
+++ b/client/sdl/client.cbp
@@ -492,6 +492,8 @@
 		<Unit filename="../src/st_stuff.cpp" />
 		<Unit filename="../src/v_draw.cpp" />
 		<Unit filename="../src/v_palette.cpp" />
+		<Unit filename="../src/v_screenshot.cpp" />
+		<Unit filename="../src/v_screenshot.h" />
 		<Unit filename="../src/v_text.cpp" />
 		<Unit filename="../src/v_text.h" />
 		<Unit filename="../src/v_video.cpp" />
