--- a/client/sdl/client.cbp
+++ b/client/sdl/client.cbp
@@ -400,6 +400,8 @@
 		<Unit filename="../../common/r_sky.h" />
 		<Unit filename="../../common/r_state.h" />
 		<Unit filename="../../common/r_things.h" />
+		<Unit filename="../../common/res_texture.cpp" />
+		<Unit filename="../../common/res_texture.h" />
 		<Unit filename="../../common/s_sndseq.cpp" />
 		<Unit filename="../../common/s_sndseq.h" />
 		<Unit filename="../../common/s_sound.h" />
