-Add v_pixelformat.h to the CodeBlocks project file.
git-svn-id: http://odamex.net/svn/root/trunk@4939 b0bcef46-2027-0410-bd56-ab726e9a1d04

--- a/client/sdl/client.cbp
+++ b/client/sdl/client.cbp
@@ -420,6 +420,7 @@
 		<Unit filename="../../common/tarray.h" />
 		<Unit filename="../../common/timegm.cpp" />
 		<Unit filename="../../common/v_palette.h" />
+		<Unit filename="../../common/v_pixelformat.h" />
 		<Unit filename="../../common/v_video.h" />
 		<Unit filename="../../common/version.cpp" />
 		<Unit filename="../../common/version.h" />
